--- a/css/admin.css
+++ b/css/admin.css
@@ -4,3 +4,12 @@
     width: 100%;
     margin-bottom: 10px;
 }
+#adduploader{
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    margin-bottom: 10px;
+}
+#sonic{
+    margin-top: 150px !important;
+}
